--- a/tests/data/appprotect/logconf.yaml
+++ b/tests/data/appprotect/logconf.yaml
@@ -1,11 +1,11 @@
 apiVersion: appprotect.f5.com/v1beta1
 kind: APLogConf
-metadata: 
+metadata:
   name: logconf
 spec:
-  content: 
+  content:
     format: default
     max_message_size: 64k
     max_request_size: any
-  filter: 
-    request_types: all
+  filter:
+    request_type: all
