--- a/deployments/helm-chart/crds/appprotectdos.f5.com_dosprotectedresources.yaml
+++ b/deployments/helm-chart/crds/appprotectdos.f5.com_dosprotectedresources.yaml
@@ -49,7 +49,7 @@ spec:
                       type: integer
                       format: int64
                     uri:
-                      description: 'Uri is the destination to the desired protected object in the nginx.conf:'
+                      description: 'URI is the destination to the desired protected object in the nginx.conf:'
                       type: string
                 apDosPolicy:
                   description: ApDosPolicy is the namespace/name of a ApDosPolicy resource
